# perf-event-data

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo.yaml  cargo.yml  dispatch.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_record.rs  fuzz_record_basic.rs
src/: config.rs  cowutils.rs  endian.rs  error.rs  flags.rs  lib.rs  macros.rs  parse.rs  parsebuf.rs  visitor.rs
src/impls/: mod.rs  perf_event_attr.rs
src/records/: aux.rs  aux_output_hw_id.rs  aux_record.rs  bpf_event.rs  cgroup.rs  comm.rs  exit.rs  itrace_start.rs  ksymbol.rs  lost.rs  lost_samples.rs  mmap.rs  mmap2.rs  mod.rs  namespaces.rs  read.rs  sample.rs  switch_cpu_wide.rs  text_poke.rs  throttle.rs
src/util/: cow.rs  fmt.rs  mod.rs
tests/: fuzz.rs  regression.rs
