[package]
name = "perf-event-data"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>"]
repository = "https://github.com/Phantomical/perf-event-data.git"
description = "Types and traits for parsing records emitted by perf_event_open"
readme = "README.md"
keywords = ["linux", "perf"]
categories = [
  "development-tools::profiling",
  "hardware-support",
  "os::linux-apis",
]
exclude = ["/.github", "/.vscode"]

[dependencies]
bitflags = "2.0"
perf-event-open-sys2 = "5.0"

# Used internally, for fuzzing support
arbitrary = { version = "1", optional = true, features = ["derive"] }

[workspace]
members = [".", "fuzz"]

[profile.release]
debug = 2
